<resources>
    <string name="app_name">Premier League</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_header">Pilih tim favoritmu</string>
    <string name="intro_btn_lanjut">Lanjut</string>
    <string name="klasemen_head_pos">Pos</string>
    <string name="klasemen_head_club">Club</string>
    <string name="klasemen_head_pld">Pld</string>
    <string name="klasemen_head_gdiff">GD</string>
    <string name="klasemen_head_pts">Pts</string>
    <string name="topskor_head_pos">Pos</string>
    <string name="topskor_head_player">Player</string>
    <string name="topskor_head_pld">Pld</string>
    <string name="topskor_head_goals">Goals</string>
    <string name="menu_klasemen">Klasemen</string>
    <string name="menu_topskor">Top Skor</string>
    <string name="menu_topsko">Favorit</string>
</resources>
